...
        callback: (context, ref) async {
          await saveCurrentProject(ref, saveAs: true);
        },
      ),
      DawToolbarMenuAction('Import Audio'),
      DawToolbarMenuAction(
        'Export Project',
        callback: (context, ref) async {
          ref.read(workspaceStateProvider.notifier).openExportPanel();
        },
      ),
      DawToolbarMenuAction(
        'Settings',
...
